--- a/views/listcard.ejs
+++ b/views/listcard.ejs
@@ -4,19 +4,19 @@
     <div class="card orangeBorder" style="min-width: 20rem;">
         <div class="card-header orangeBorder text-center position-relative">
             <h4> <%= list.title %> </h4>
-           <!-- <form action="/deleteList/<%#=list._id%>" method="post">
+           <form action="/deleteList/<%=list._id%>" method="post">
             <button type="submit" style="top: 40%; right: 0; margin-right: 1.5rem;" class="position-absolute border-0 bg-transparent">
                 <i  class="fa-solid fa-trash  "></i>
              </button> 
-        </form> -->
+        </form>
             <!-- <small class="text-muted">23-1-2023</small> -->
         </div>
         <ul class="list-group orangeBorder list-group-flush fs-4">
             <% list.items.forEach(task => { %>
 
             <li
-                class="list-group-item orangeBorder  <%= task.checked? "checked":"" %> ">
-                <form action="/toggleCheck/<%= list._id %>" method="post">
+                class="list-group-item orangeBorder my-auto bg-Peach d-flex justify-content-between align-items-center <%= task.checked? "checked":"" %> ">
+                <form action="/toggleCheck/<%= list._id %>" method="post" class="my-auto">
                     <input name="checkedValue" value="<%=task.checked%>"
                         type="hidden">
                     <input class="me-2 <%= task.checked? "checked":"" %> "type="checkbox"
@@ -26,9 +26,16 @@
                         <input name="taskId" value="<%=task._id%>"
                         type="hidden">
                     <% } %>
-                 
+                  
                     <%=task.name %>
                 </form>
+                    <form action="/deleteTask/<%=task._id%>" method="post" class=" my-auto">
+                        <input type="hidden" name="listId" value="<%= list._id %>">
+                        <button type="submit"   class="  fs-6 border-0 bg-transparent my-2">
+                            <i  class="fa-solid fa-trash  "></i>
+                         </button> 
+                    </form>
+               
             </li>
             <% });%>
 
