adding email verification

--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -1,13 +1,13 @@
 <%- include('header.ejs') %>
-<div class=" py-5 m-lg-0 mb-5 container-fluid    mb-5 d-flex justify-content-center align-items-center "
+<div class=" py-lg-1 py-5 m-lg-0 mb-5 container-fluid  mb-5 d-flex justify-content-center align-items-center "
     style="width: 100% !important ; min-height:100vh; 
  background-image: linear-gradient(to right, #EE4E34 50%, #FCEDDA );
  background-size: cover; 
  ">
 <!-- // listcard implementation -->
-    <div style class="  container-lg container-fluid py-3   h-100 ">
-         <section  class="  d-flex justify-content-end mt-lg-0 mt-5 ">
-          <form action="/addList" method="get">
+    <div style class="  container-lg container-fluid py-3  h-100 ">
+         <section  style="top: 6rem ; right: 2rem;" class="position-absolute   my-lg-0 mt-5 mb-3">
+          <form class="  " action="/addList" method="get">
             <button class="btn customGrid addBtn fs-5" type="submit"> Add
               List</button>
           </form>
